--- a/src/app/header/image/image.component.html
+++ b/src/app/header/image/image.component.html
@@ -5,4 +5,19 @@
      [style.height]="height"
      [style.width]="'100%'"
 >
+  <h1 [style.position]="'relative'"
+      [style.padding-top]="'150px'"
+      [style.font-size]="'5em'"
+      [style.color]="'gray'"
+      [style.text-align]="'center'"
+  >
+    {{ info.name }}
+  </h1>
+  <h3 [style.text-align]="'center'"
+      [style.color]="'gray'"
+      [style.padding-bottom]="'150px'"
+      [style.position]="'relative'"
+  >
+    {{ info.slogan }}
+  </h3>
 </div>
