--- a/src/app/header/navigation/navigation.component.html
+++ b/src/app/header/navigation/navigation.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a href="#" class="navbar-brand">MMaelicke</a>
+    <a routerLink="/" class="navbar-brand">{{ brandName }}</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar">
       Menu <fa name="bars"></fa>
     </button>
     <div class="collapse navbar-collapse" id="navbar">
       <ul class="navbar-nav mr-auto">
         <li class="navbar-item">
-          <a href="#" class="nav-link">C.V.</a>
+          <a routerLink="/cv" class="nav-link">C.V.</a>
         </li>
         <li class="navbar-item">
-          <a href="#" class="nav-link">About Me</a>
+          <a routerLink="/about" class="nav-link">About Me</a>
         </li>
       </ul>
     </div>
