--- a/src/app/main/cv/cv.component.html
+++ b/src/app/main/cv/cv.component.html
@@ -1,3 +1,5 @@
-<p>
-  cv works!
-</p>
+<!-- Education section -->
+<app-section [title]="'Education'" [contents]="education.reverse()"></app-section>
+
+<!-- Work Experience section -->
+<app-section [title]="'Work Experience'" [contents]="work.reverse()"></app-section>
