--- a/src/app/main/cv/cv.component.html
+++ b/src/app/main/cv/cv.component.html
@@ -2,4 +2,4 @@
 <app-section [title]="'Education'" [contents]="education.reverse()"></app-section>
 
 <!-- Work Experience section -->
-<app-section [title]="'Work Experience'" [contents]="work.reverse()"></app-section>
+<app-section [title]="'Work Experience'" [contents]="work.reverse()" [collapsed]="true"></app-section>
